# CppND-Capstone-Hotdog-Video-Detector

./: .gitignore  CMakeLists.txt  README.md
src/: Detector.cpp  Detector.h  Model.cpp  Model.h  main.cpp
